spade-tests/src/snapshots/spade_tests__typeinference__empty_array_pattern_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(a: [bool; 0]) {
    match a {
        [] => {}
    }
}


error: Empty array patterns are unsupported
  ┌─ testinput:3:9
  │
3 │         [] => {}
  │         ^^ Empty array pattern
